--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Install the jupyterlite dependencies
+      - name: Install the dependencies
         run: |
           python -m pip install -r jupyterlite-requirements.txt
-      - name: Install the project dependencies
-        run: |
-          python -m pip install -r requirements.txt
       - name: Build the JupyterLite site
         run: |
           cp README.md content
